--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,24 +5,14 @@ jobs:
       - image: circleci/openjdk:11.0.2-jdk
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            # when lock file changes, use increasingly general patterns to restore cache
-            - gradle-repo-v1-{{ .Branch }}-{{ checksum "dependencies.lockfile" }}
-            - gradle-repo-v1-{{ .Branch }}-
-            - gradle-repo-v1-
-      - run: ./gradlew compileTestKotlin
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: gradle-repo-v1-{{ .Branch }}-{{ checksum "dependencies.lockfile" }}
       - run:
           name: Run Tests
-          command: ./gradlew clean test
+          command: gradle  --stacktrace  --debug --scan clean test
       - run:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
+            ls -l ~/test-results
             find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
           when: always
       - store_test_results:
