--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:11.0.2-jdk
+      - image: circleci/openjdk:11.0.2-jdk-browsers
     steps:
       - checkout
       - run:
           name: Run Tests
-          command: gradle  --stacktrace  --debug --scan clean test
+          command: ./gradlew test
       - run:
           name: Save test results
           command: |
@@ -19,3 +19,22 @@ jobs:
           path: ~/test-results
       - store_artifacts:
           path: ~/test-results/junit
+#version: 2
+#jobs:
+#  build:
+#    docker:
+#      - image: circleci/openjdk:8-jdk-browsers
+#    working_directory: ~/repo
+#    steps:
+#      - checkout
+#      - run: ./gradlew test
+#      - run:
+#          name: Save test results
+#          command: |
+#            mkdir -p ~/test-results/junit/
+#            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+#          when: always
+#      - store_test_results:
+#          path: ~/test-results
+#      - store_artifacts:
+#          path: ~/test-results/junit
