--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:11.0.2-jdk-browsers
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
@@ -12,8 +13,13 @@ jobs:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
-            ls -l ~/test-results
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
+            echo "HOGE"
+            ls -l ~/test-results/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp -p {} ~/test-results/junit/ \;
+            echo "FUGA"
+            ls -l ~/test-results/junit/
+            chmod -R 777 ~/test-results/
+            ls -l ~/test-results/junit/
           when: always
       - store_test_results:
           path: ~/test-results
