--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,25 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run: gradle dependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew test
+          command: gradle test
       - run:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
-            echo "HOGE"
-            ls -l ~/test-results/junit/
             find . -type f -regex ".*/build/test-results/.*xml" -exec cp -p {} ~/test-results/junit/ \;
-            echo "FUGA"
-            ls -l ~/test-results/junit/
-            chmod -R 777 ~/test-results/
-            ls -l ~/test-results/junit/
           when: always
       - store_test_results:
           path: ~/test-results
