--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ workflows:
   schedule_workflow:
     triggers:
       - schedule:
-          cron: "10,13 * * * *" # UTCで記述。-9hours
+          cron: "1 3 1 * *" # UTCで記述。-9hours
           filters:
             branches:
               only:
